Create NutriView react app bundle

--- a/app/views/food_items/index.html.erb
+++ b/app/views/food_items/index.html.erb
@@ -2,6 +2,8 @@
 
 <h1>Food Items</h1>
 
+<%= react_component("NutriViewApp", props: @food_items_props, prerender: false) %>
+
 <table>
   <thead>
     <tr>
