Isolate FoodSearchInput into it's own reusable React component

--- a/app/views/food_items/index.html.erb
+++ b/app/views/food_items/index.html.erb
@@ -2,7 +2,7 @@
 
 <h1>Food Items</h1>
 
-<%= react_component("NutriViewApp", props: @food_items_props, prerender: false) %>
+<%= react_component("FoodSearchComponent", props: @food_items_props, prerender: false) %>
 
 <table>
   <thead>
