--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,6 +15,8 @@
       <%= content_tag :div, msg, class: name %>
     <% end %>
 
+    <%= render 'shared/top_bar' %>
+
     <%= yield %>
 
     <%= redux_store_hydration_data %>
