--- a/app/views/shared/_top_bar.html.erb
+++ b/app/views/shared/_top_bar.html.erb
@@ -2,18 +2,18 @@
   <div class="top-bar" data-sticky data-options="marginTop:0;" style="width:100%">
     <div class="top-bar-left">
       <ul class="menu">
-        <li><%= link_to 'Home', root_path, class: 'menu text' %></li>
-        <li><%= link_to 'Search food', class: 'menu text' %></li>
+        <li><%= link_to 'Home', root_path %></li>
+        <li><%= react_component("FoodSearchApp") %></li>
       </ul>
     </div>
 
     <div class="top-bar-right">
       <ul class="menu">
         <% if user_signed_in? %>
-          <li><%= link_to 'Logout', destroy_user_session_path, method: :delete, class: 'menu text' %></li>
+          <li><%= link_to 'Logout', destroy_user_session_path, method: :delete %></li>
         <% else %>
-          <li><%= link_to 'Sign up', new_user_registration_path, class: 'menu text' %></li>
-          <li><%= link_to 'Login', new_user_session_path, class: 'menu text' %></li>
+          <li><%= link_to 'Sign up', new_user_registration_path %></li>
+          <li><%= link_to 'Login', new_user_session_path %></li>
         <% end %>
       </ul>
     </div>
