Implement save FDC food JSON data to database

--- a/app/views/food_items/show.html.erb
+++ b/app/views/food_items/show.html.erb
@@ -1,4 +1,13 @@
 <p id="notice"><%= notice %></p>
 
+<p>
+  <strong>Food Description: </strong>
+  Not Implemented
+</p>
+<p>
+  <strong>Made by: </strong>
+  Not Implemented
+</p>
+
 <%= link_to 'Edit', edit_food_item_path(@food_item) %> |
 <%= link_to 'Back', food_items_path %>
