--- a/app/views/shared/_top_bar.html.erb
+++ b/app/views/shared/_top_bar.html.erb
@@ -1,4 +1,4 @@
-<div class="data-sticky-container">
+<div data-sticky-container>
   <div class="top-bar" data-sticky data-options="marginTop:0;" style="width:100%">
     <div class="top-bar-left">
       <ul class="menu">
