Reorganize client side javascript folder structure

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,12 +20,13 @@
 
       <%= render 'shared/top_bar' %>
 
-      <%= yield %>
+      <div id="content">
+        <%= yield %>
+      </div>
 
       <%= render 'shared/footer' %>
     </div>
 
     <%= redux_store_hydration_data %>
-
   </body>
 </html>
