--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,7 +1,1 @@
-<div id="footer">
-    <p>
-      Food Data Source: U.S. Department of Agriculture, Agricultural Research Service. FoodData Central, 2019.
-      <a href="https://fdc.nal.usda.gov/" target="_blank">fdc.nal.usda.gov</a>
-    </p>
-  </div>
-</div>
+<%= react_component("Footer") %>
